<resources>
    <string name="app_name">SIFAM</string>
	<string name="item_accounts">%0 Accounts</string>
	<string name="item_account">%0 Account</string>
	<string name="last_loaded">Last Loaded: %0</string>

	<string name="server_name_en">English</string>
	<string name="server_name_jp">Japan</string>
	<string name="server_name_tw">Taiwan</string>
	<string name="server_name_kr">Korea</string>
	<string name="server_name_cn">China</string>

	<string name="menu_save">Save</string>
	<string name="menu_new">New Account</string>
	<string name="menu_search">Search</string>
	<string name="menu_sort">Sort</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_new_folder">New Folder</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_delete_gea">Delete GameEngineActivity</string>
	<string name="menu_import">Import Accounts</string>
	<string name="menu_backup">Backup Management</string>
	<string name="menu_qr">Scan QR</string>
	<string name="menu_debug">Debug Tools</string>
	<string name="title_setting">SIFAM Settings</string>
	<string name="title_screen_server_setting">Server Settings</string>
	<string name="title_all_settings">All Settings</string>
	<string name="title_screen_overlay_setting">Overlay Settings</string>
	<string name="title_screen_save_and_load_setting">Save &amp; Load Settings</string>
	<string name="title_general_settings">General Settings</string>
    <string name="title_checkbox_folder_on_bottom">Folders on Bottom</string>
	<string name="summary_checkbox_folder_on_bottom_on">Folders will be under accounts in the list.</string>
	<string name="summary_checkbox_folder_on_bottom_off">Folders will be above accounts in the list.</string>
	<string name="title_no_warnings">Disable Warnings and Alerts</string>
	<string name="summary_no_warnings_on">No alerts or confirmations will be displayed when performing actions.\nThis feature is intended to be used with macros and should not be used with your main accounts.</string>
	<string name="summary_no_warnings_off">Alerts will be displayed when performing an action that may not be ideal.\nEnabling this feature is generally a bad idea unless you know what you\'re doing.</string>
	<string name="title_no_delete_warning">No Warning on Delete</string>
	<string name="summary_no_delete_warning_on">NO CONFIRMATION WILL BE REQUESTED WHEN DELETING ACCOUNTS.\nThis does not include folders with accounts in them.</string>
	<string name="summary_no_delete_warning_off">Enabling this will disable the confirmation when deleting accounts.\nDon\'t blame me if you delete something important.</string>
    <string name="summary_not_installed">This version of School Idol Festival is not installed!</string>
	<string name="summary_server_on">Accounts from this server will be displayed.</string>
	<string name="summary_server_off">Accounts from this server will not be displayed.</string>
	<string name="title_enabled_overlays">Enabled Overlays</string>
	<string name="title_enable_overlay">Enable Overlay</string>
	<string name="summary_enable_overlay_on">Enabled Overlays will be displayed</string>
	<string name="summary_enable_overlay_off">No overlays will be displayed</string>
	<string name="title_close_button">Close Button</string>
	<string name="summary_close_button_on">Will show button to return to SIFAM</string>
	<string name="summary_close_button_off">Adds button to return to SIFAM</string>
	<string name="title_overlay_name">Display Account Name</string>
	<string name="summary_overlay_name_on">Will show account name on overlay</string>
	<string name="summary_overlay_name_off">Adds account name to the overlay</string>
	<string name="title_overlay_rename">Display Rename Button</string>
	<string name="summary_overlay_rename_on">Will show button to rename loaded account</string>
	<string name="summary_overlay_rename_off">Adds button to rename loaded account</string>
	<string name="title_quick_save">Quick Save</string>
	<string name="summary_quick_save_on">Account will use the current time as a name.</string>
	<string name="summary_quick_save_off">Account will ask for name before saving.</string>
	<string name="title_alternate_qs">Alternate QS Name</string>
	<string name="summary_alternate_qs_on">Will use numbers for account name.</string>
	<string name="summary_alternate_qs_off">Will use data/time for account name.</string>
	<string name="title_auto_start">Auto Start SIF</string>
	<string name="summary_auto_start_on">SIF will launch as soon as account has been loaded.</string>
	<string name="summary_auto_start_off">SIF will not open after an account has been loaded.</string>
	<string name="title_allow_duplicate_save">Allow Duplicate Saves</string>
	<string name="summary_allow_duplicate_save_on">SIFAM won\'t check for existing save.</string>
	<string name="summary_allow_duplicate_save_off">SIFAM will check if the current account is already saved before saving.</string>
	<string name="lable_last_loded_never">Last Loaded: Never</string>
	<string name="lable_last_loded">Last Loaded:</string>

</resources>
